WebGL activates the discrete GPU on MacOS with "Use hardware acceleration: false"
Categories
(Core :: Graphics: CanvasWebGL, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox67 | --- | fixed |
People
(Reporter: brandon, Assigned: jgilbert)
References
(Blocks 1 open bug)
Details
(Whiteboard: gfx-noted)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:66.0) Gecko/20100101 Firefox/66.0
Steps to reproduce:
Using MacOS 10.14.2 / Firefox 66.0b3
In Preferences, uncheck "Use hardware acceleration when available" and restart the browser.
Launch Activity Monitor and select the Energy tab.
Notice that Firefox has "Requires High Perf GPU: No"
Navigate to https://maps.google.com
Notice that Firefox now has "Requires High Perf GPU: Yes"
Actual results:
WebGL is forcing the use of the discrete GPU, regardless of the "Use hardware acceleration when available" setting.
Expected results:
WebGL should not use the discrete GPU when "Use hardware acceleration when available" is enabled.
This matches Chromium (71.0.3578.98) - when "Use hardware acceleration when available" is enabled, WebGL will use the discrete GPU, but when the setting is disabled, WebGL will not trigger the use of the discrete GPU. You can verify this following the same procedure described above.
Opera (based on Chromium) has a better solution, which has a separate toggle for "Allow use of computer's dedicated GPU" without disabling all hardware acceleration.
Apologies for the typo, expected results should read:
WebGL should not use the discrete GPU when "Use hardware acceleration when available" is disabled.
Comment 2•7 years ago
|
||
I don't have discrete GPU on my Mac OS, so I couldn't test this issue. I am placing this under Core: Graphics so someone can look into this. Thanks!
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 3•7 years ago
|
||
"Use hardware acceleration: No" should definitely keep WebGL off the dGPU, at least.
We should also add prefs:
- gl.allow-dgpu: false
- webgl.default-low-power: false
| Assignee | ||
Comment 4•7 years ago
|
||
Also, if "Use hardware acceleration when available" is disabled, restrict webgl to the igpu.
| Assignee | ||
Updated•7 years ago
|
Comment 6•7 years ago
|
||
| bugherder | ||
Updated•7 years ago
|
Description
•