Bug 1523728 - Add gl.allow-high-power:true, webgl.default-low-power:false. r=lsalzman

Also, if "Use hardware acceleration when available" is disabled, restrict webgl to the igpu.

Differential Revision: https://phabricator.services.mozilla.com/D19059